--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "expo": "~37.0.3",
+    "moment": "^2.25.3",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
+    "react-moment": "^0.9.7",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "^1.5.6",
     "react-native-reanimated": "^1.4.0",
