--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "~16.9.0",
     "react-moment": "^0.9.7",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-check-box": "^2.1.7",
     "react-native-gesture-handler": "^1.5.6",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.6.0",
